fix default theme

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,9 @@
 @use 'sass:meta';
-html.theme-default {
-  @include meta.load-css('node_modules/antd/dist/antd.min.css', $with: null);
+html:not(.theme-dark) {
+@include meta.load-css('node_modules/antd/dist/antd.min.css', $with: null);
 }
 
-html:not(.theme-default) {
+html.theme-dark {
   @include meta.load-css('node_modules/antd/dist/antd.dark.min.css', $with: null);
 }
 
