add template component

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,7 @@ html:not(.theme-dark) {
   @include meta.load-css('node_modules/antd/dist/antd.min.css', $with: null);
 }
 
-html.theme-dark {
+html.dark {
   @include meta.load-css(
     'node_modules/antd/dist/antd.dark.min.css',
     $with: null
